# ai-challenge

./: .env.example  .gitignore  README.md  benchmark.py  bot.py  chat.py  day32_code_review.py  demo_citations.py  demo_context_compression.py  demo_context_strategies.py  demo_invariants.py  demo_local_stack.py  demo_local_vs_cloud.py  demo_mcp_connect.py  demo_mcp_orchestration.py  demo_mcp_server.py  demo_memory.py  demo_news_digest.py  demo_news_pipeline.py  demo_ollama.py  demo_optimization.py  demo_profiles.py  demo_rag_indexer.py  demo_rag_query.py  demo_reranking.py  demo_support_chat.py  demo_task_fsm.py  demo_task_transitions.py  demo_token_counting.py  demo_vps_service.py  llm_cli.py  main.py  pyproject.toml  solution_comparison.py  telegram_bot.py  temperature_demo.py  test_benchmark.py  test_chat.py
.github/workflows/: ai_code_review.yml
config/: file-assistant.md  mcp-servers.md  support-agent-persona.md
config/invariants/: architecture.md  research.md  rules.md  stack.md  task-transitions.md
demo_data/invariants/: architecture.md  business-rules.md  stack.md
llm_agent/: __init__.py  agent_loop.py  commands.py  config.py  file_tools.py  tool_executor.py
llm_agent/application/: __init__.py  (+5 more)
mcp_client/: __init__.py  client.py  config.py
mcp_server/: __init__.py  cbr_api.py  cbr_server.py  crm_server.py  git_server.py  journal_server.py  llm_client.py  news_api.py  news_scheduler.py  news_server.py  news_storage.py  rss_parser.py  scheduler.py  scraper_server.py  search_mock_data.json  search_server.py  telegram_server.py
modelfiles/: Modelfile.q4  Modelfile.q8  Modelfile.rag
orchestrator/: __init__.py  research_context.py  research_orchestrator.py  research_states.py
rag_indexer/: .gitignore  main.py  requirements.txt
src/: indexer.py  llm_helper.py
tests/: test_agent.py  test_cbr_server.py  test_chat_history_repository.py  test_context_strategies.py  test_invariants.py  test_mcp_client.py  test_news_digest.py  test_qwen_client.py  test_token_counting.py  test_transition_guard.py
tools/: file_assistant.py  index_project_docs.py  support_agent.py  support_bot.py  user_simulator.py
(+61 files in other folders)
